<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B3B1B1"
    tools:context=".PersonalRecipes">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:fontFamily="monospace"
        android:text="User Recipes"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView6"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="Recipe Adder:"
        android:textColor="#000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/EnterD"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/EnterRName"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Enter Description"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/EnterRName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView7"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Enter Recipe Name"
        android:textSize="20sp" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="219dp"
        android:layout_height="35dp"
        android:layout_below="@id/Isearch"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:queryHint="Enter Ingredient" />

    <ListView
        android:id="@+id/Ingrelist"
        android:layout_width="164dp"
        android:layout_height="209dp"
        android:layout_below="@id/Isearch"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="71dp" />

    <ListView
        android:id="@+id/Relist"
        android:layout_width="184dp"
        android:layout_height="215dp"
        android:layout_below="@id/Isearch"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="70dp" />

    <TextView
        android:id="@+id/Isearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/EnterD"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="Ingredient Search:"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Isearch"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="40dp"
        android:text=" In Recipe:"
        android:textColor="#000000" />

    <Button
        android:id="@+id/AddtoL"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Ingrelist"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="10dp"
        android:text="Add Recipe" />

    <Button
        android:id="@+id/button5"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Ingrelist"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="Back" />

    <Button
        android:id="@+id/button6"
        android:layout_width="191dp"
        android:layout_height="62dp"
        android:layout_below="@id/button5"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="Add Ingredients" />

</RelativeLayout>