<resources>
    <string name="app_name">Frontend</string>
    <string name="ingredients_list">Ingredients list</string>
    <string name="add">Add</string>
    <string name="enter_ingredient_to_add">Enter Ingredient to Add</string>
    <string name="ingredient_list">Ingredient List</string>
    <string name="ingredients">Ingredients</string>
</resources>