<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFB3B1B1"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:fontFamily="monospace"
        android:text="Leaderboard"
        android:textColor="#000000"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="70sp"
        android:fontFamily="sans-serif-black"
        android:text="Intake - Calories Burned"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="169dp"
        android:layout_height="449dp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="125sp"
        android:fontFamily="serif"
        android:text="Intake - Burned"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/backhome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="600dp"
        android:text="Back" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="192dp"
        android:layout_height="445dp"
        android:layout_marginLeft="200sp"
        android:layout_marginTop="125sp"
        android:fontFamily="serif"
        android:text="Calories Burned"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="70sp"
        android:fontFamily="sans-serif-black"
        android:text="Total Calories Burned"
        android:textColor="#000000"
        android:textSize="20sp" />
</RelativeLayout>